Fix banner on mobile

--- a/style.css
+++ b/style.css
@@ -64,9 +64,7 @@ nav a {
 }
 
 .banner h2 {
-    /* TODO: Fit text to container */
     text-align: center;
-    font-size: 2.5vw;
 
     color: white;
 
@@ -194,6 +192,11 @@ nav a {
 
 /* Media Queries */
 @media screen and (orientation: landscape) {
+    .banner h2 {
+        /* TODO: Fit text to container */
+        font-size: 2.5vw;
+    }
+
     /* No ham menu */
     .ham_button {
         display: none;
